# Copyright (C) 2019 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub-common"
version = "0.1.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
easy_process = "0.1"
failure = "0.1"
parse_duration = "1"
serde = { version = "1", features = ["derive"] }
serde_ini = "0.2"
slog-scope = "4"
walkdir = "2"

[dev-dependencies]
mockito = "0.20"
pretty_assertions = "0.6"
tempfile = "3"
